--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "node": ">=10.15.1"
   },
   "scripts": {
-    "start": "gulp",
-    "production": "gulp production",
+    "start": "cross-env NODE_ENV=development webpack --progress && nodemon --watch server --inspect server.js",
+    "production": "cross-env NODE_ENV=production webpack --progress && cross-env NODE_ENV=production node server.js",
     "test": "nyc mocha --color --timeout 10000 --recursive './server/**/*spec.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "webpack": "webpack --progress --watch --display-error-details --config=app/config/webpack.development"
+    "webpack": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -67,14 +67,12 @@
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.0.7",
+    "cross-env": "^6.0.3",
     "css-loader": "^3.2.0",
     "faker": "^4.1.0",
-    "gulp": "^4.0.2",
-    "gulp-load-plugins": "^2.0.1",
-    "gulp-mocha": "^7.0.2",
-    "gulp-nodemon": "^2.4.2",
     "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
     "nyc": "^14.1.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "supertest": "^4.0.2",
@@ -82,7 +80,6 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
-    "webpack-merge": "^4.2.2",
-    "webpack-stream": "^5.2.1"
+    "webpack-merge": "^4.2.2"
   }
 }
