--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": [
-      "react-html-attrs",
-      "@babel/plugin-proposal-object-rest-spread"
-    ]
-  }
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    "lodash",
+    "react-html-attrs",
+    "@babel/plugin-proposal-object-rest-spread"
+  ]
+}
