--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -15,27 +15,27 @@
     "webpack": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details"
   },
   "dependencies": {
-    "async": "^3.1.0",
-    "axios": "^0.19.0",
+    "async": "^3.1.1",
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.18.1",
+    "cloudinary": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
+    "date-fns": "^2.9.0",
     "dotenv": "^8.2.0",
-    "draft-js": "^0.11.3",
+    "draft-js": "^0.11.4",
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
     "express-hbs": "^2.3.0",
     "fomantic-ui-css": "^2.8.3",
-    "formik": "^2.1.0",
+    "formik": "^2.1.4",
     "glob": "^7.1.6",
     "highcharts": "^8.0.0",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "memory-cache": "^0.2.0",
-    "moment": "^2.24.0",
-    "mongoose": "^5.8.3",
+    "mongoose": "^5.9.1",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.1",
@@ -43,10 +43,10 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "query-string": "^6.9.0",
+    "query-string": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-intl": "^3.9.3",
+    "react-intl": "^3.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
@@ -54,32 +54,34 @@
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
-    "validator": "^12.1.0",
-    "yup": "^0.28.0"
+    "validator": "^12.2.0",
+    "yup": "^0.28.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.0.9",
-    "cross-env": "^6.0.3",
-    "css-loader": "^3.4.0",
+    "cross-env": "^7.0.0",
+    "css-loader": "^3.4.2",
     "faker": "^4.1.0",
+    "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^6.2.2",
+    "mocha": "^7.0.1",
     "nodemon": "^2.0.2",
     "nyc": "^15.0.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^2.3.1",
+    "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
 }
