--- a/package.json
+++ b/package.json
@@ -4,83 +4,83 @@
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
-  "engines": {
-    "node": ">=12.13.0"
-  },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack --progress && nodemon --watch server --inspect server.js",
-    "production": "cross-env NODE_ENV=production webpack --progress && cross-env NODE_ENV=production node server.js",
+    "start": "run-p webpack:development pm2:development",
+    "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon",
+    "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details",
+    "pm2:production": "cross-env NODE_ENV=production pm2 start server.js",
+    "webpack:production": "cross-env NODE_ENV=production webpack --progress",
+    "production": "run-s webpack:production pm2:production",
     "test": "nyc mocha --color --timeout 10000 --recursive './server/**/*spec.js'",
-    "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "webpack": "cross-env NODE_ENV=development webpack --progress --watch --display-error-details"
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "dependencies": {
-    "async": "^3.1.1",
+    "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.19.0",
+    "cloudinary": "^1.21.0",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.4",
-    "date-fns": "^2.9.0",
+    "cookie-parser": "^1.4.5",
+    "date-fns": "^2.12.0",
     "dotenv": "^8.2.0",
-    "draft-js": "^0.11.4",
+    "draft-js": "^0.11.5",
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
-    "express-hbs": "^2.3.0",
-    "fomantic-ui-css": "^2.8.3",
+    "express-hbs": "^2.3.3",
+    "fomantic-ui-css": "^2.8.4",
     "formik": "^2.1.4",
     "glob": "^7.1.6",
-    "highcharts": "^8.0.0",
+    "highcharts": "^8.0.4",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "memory-cache": "^0.2.0",
-    "mongoose": "^5.9.1",
+    "mongoose": "^5.9.9",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.2",
+    "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "query-string": "^6.11.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-intl": "^3.12.0",
-    "react-redux": "^7.1.3",
+    "query-string": "^6.12.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-intl": "^4.4.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^0.88.2",
-    "validator": "^12.2.0",
-    "yup": "^0.28.1"
+    "validator": "^13.0.0",
+    "yup": "^0.28.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/preset-env": "^7.8.4",
-    "@babel/preset-react": "^7.8.3",
-    "babel-loader": "^8.0.6",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^2.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "coveralls": "^3.0.9",
-    "cross-env": "^7.0.0",
-    "css-loader": "^3.4.2",
+    "coveralls": "^3.0.11",
+    "cross-env": "^7.0.2",
+    "css-loader": "^3.5.2",
     "faker": "^4.1.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^7.0.1",
-    "nodemon": "^2.0.2",
-    "nyc": "^15.0.0",
+    "mocha": "^7.1.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^15.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "pm2": "^4.2.3",
     "supertest": "^4.0.2",
     "terser-webpack-plugin": "^2.3.5",
-    "url-loader": "^3.0.0",
-    "webpack": "^4.41.6",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-merge": "^4.2.2"
   }
