--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "seed": "node seeder.js"
   },
   "dependencies": {
-    "@casl/ability": "^4.1.0",
+    "@casl/ability": "^4.1.1",
+    "@sentry/browser": "^5.15.5",
+    "@sentry/node": "^5.15.5",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -36,7 +38,7 @@
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.15",
+    "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.6",
     "passport": "^0.4.1",
@@ -46,7 +48,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^4.5.5",
+    "react-intl": "^4.5.12",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
@@ -58,10 +60,10 @@
     "yup": "^0.29.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.10.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/preset-react": "^7.10.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.4",
@@ -72,13 +74,13 @@
     "css-loader": "^3.5.3",
     "faker": "^4.1.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^7.1.2",
+    "mocha": "^7.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^3.0.1",
+    "terser-webpack-plugin": "^3.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
