--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -20,7 +20,7 @@
     "@casl/ability": "^4.1.3",
     "@sentry/browser": "^5.15.5",
     "@sentry/node": "^5.15.5",
-    "apollo-server": "^2.14.1",
+    "apollo-server-express": "^2.14.1",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -54,6 +54,7 @@
     "react-dom": "^16.13.1",
     "react-intl": "^4.6.3",
     "react-redux": "^7.2.0",
+    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
