--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "test": "nyc mocha --color --timeout 10000 --recursive './tests/**/*spec.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "seed": "node seeder.js",
-    "eslint": "eslint src/**"
+    "eslint": "eslint src/**",
+    "jest": "jest"
   },
   "dependencies": {
     "@casl/ability": "^4.1.5",
-    "@sentry/browser": "^5.19.2",
-    "@sentry/node": "^5.19.2",
+    "@sentry/browser": "^5.20.1",
+    "@sentry/node": "^5.20.1",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -31,18 +32,18 @@
     "draft-js": "^0.11.6",
     "draft-js-export-html": "^1.4.1",
     "express": "^4.17.1",
-    "express-hbs": "^2.3.3",
+    "express-hbs": "^2.3.4",
     "fomantic-ui-css": "^2.8.6",
     "formik": "^2.1.5",
     "glob": "^7.1.6",
-    "helmet": "^3.23.3",
+    "helmet": "^4.0.0",
     "highcharts": "^8.1.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.19",
-    "mongoose": "^5.9.25",
+    "mongoose": "^5.9.28",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.10",
+    "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
@@ -51,46 +52,50 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^5.3.2",
-    "react-redux": "^7.2.0",
+    "react-intl": "^5.4.6",
+    "react-redux": "^7.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.2",
+    "semantic-ui-react": "^1.1.1",
     "validator": "^13.1.1",
-    "yup": "^0.29.1"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/core": "^7.11.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
+    "@testing-library/react": "^10.4.8",
+    "babel-jest": "^26.2.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-react-html-attrs": "^3.0.4",
+    "babel-plugin-react-html-attrs": "^3.0.5",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "css-loader": "^3.6.0",
-    "eslint": "^7.5.0",
-    "eslint-plugin-react": "^7.20.3",
+    "css-loader": "^4.2.1",
+    "eslint": "^7.6.0",
+    "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^4.0.8",
     "faker": "^4.1.0",
+    "jest": "^26.2.2",
     "mini-css-extract-plugin": "^0.9.0",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
+    "react-test-renderer": "^16.13.1",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^3.0.7",
+    "terser-webpack-plugin": "^4.0.0",
     "url-loader": "^4.1.0",
-    "webpack": "^4.43.0",
+    "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
-    "webpack-merge": "^5.0.9"
+    "webpack-merge": "^5.1.1"
   }
 }
