--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
     "test": "nyc mocha --color --timeout 10000 --recursive './tests/**/*spec.js'",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "seed": "node seeder.js",
-    "eslint": "eslint src/**",
-    "jest": "jest"
+    "eslint": "eslint src/**"
   },
   "dependencies": {
     "@casl/ability": "^4.1.5",
-    "@sentry/browser": "^5.20.1",
-    "@sentry/node": "^5.20.1",
+    "@sentry/browser": "^5.21.1",
+    "@sentry/node": "^5.21.1",
     "async": "^3.2.0",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
@@ -36,12 +35,12 @@
     "fomantic-ui-css": "^2.8.6",
     "formik": "^2.1.5",
     "glob": "^7.1.6",
-    "helmet": "^4.0.0",
+    "helmet": "^4.1.0",
     "highcharts": "^8.1.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.19",
-    "mongoose": "^5.9.28",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
@@ -52,7 +51,7 @@
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^5.4.6",
+    "react-intl": "^5.6.3",
     "react-redux": "^7.2.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -60,7 +59,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^1.1.1",
+    "semantic-ui-react": "^1.2.0",
     "validator": "^13.1.1",
     "yup": "^0.29.3"
   },
@@ -69,8 +68,6 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@testing-library/react": "^10.4.8",
-    "babel-jest": "^26.2.2",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
@@ -79,20 +76,18 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint": "^7.7.0",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.0.8",
     "faker": "^4.1.0",
-    "jest": "^26.2.2",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "mocha": "^8.1.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "pm2": "^4.4.0",
-    "react-test-renderer": "^16.13.1",
     "supertest": "^4.0.2",
-    "terser-webpack-plugin": "^4.0.0",
+    "terser-webpack-plugin": "^4.1.0",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
