--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.15.1",
+  "version": "0.16.0",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "@casl/ability": "^5.1.2",
-    "@sentry/browser": "^5.29.2",
-    "@sentry/node": "^5.29.2",
+    "@sentry/browser": "^6.0.1",
+    "@sentry/node": "^6.0.1",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
@@ -35,12 +35,12 @@
     "fomantic-ui-css": "^2.8.7",
     "formik": "^2.2.6",
     "glob": "^7.1.6",
-    "helmet": "^4.3.1",
+    "helmet": "^4.4.1",
     "highcharts": "^8.2.2",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.11",
+    "mongoose": "^5.11.13",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.17",
     "passport": "^0.4.1",
@@ -51,7 +51,8 @@
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.10.14",
+    "react-google-recaptcha": "^2.1.0",
+    "react-intl": "^5.10.16",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -59,7 +60,7 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^2.0.1",
+    "semantic-ui-react": "^2.0.3",
     "validator": "^13.5.2",
     "yup": "^0.32.8"
   },
@@ -76,21 +77,21 @@
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.0.1",
-    "eslint": "^7.17.0",
+    "eslint": "^7.18.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "faker": "^5.1.0",
-    "mini-css-extract-plugin": "^1.3.3",
+    "mini-css-extract-plugin": "^1.3.4",
     "mocha": "^8.2.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "pm2": "^4.5.1",
-    "supertest": "^6.0.1",
+    "supertest": "^6.1.1",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "5.12.3",
-    "webpack-cli": "4.3.1",
+    "webpack": "5.16.0",
+    "webpack-cli": "4.4.0",
     "webpack-merge": "^5.7.3"
   }
 }
