--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "gadget-catalog",
-  "version": "0.16.0",
+  "version": "0.16.1",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "scripts": {
     "start": "run-p webpack:development pm2:development",
     "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon --name gadget-catalog",
-    "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --stats-error-details",
+    "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --stats normal",
     "pm2:production": "cross-env NODE_ENV=production pm2 start server.js --name gadget-catalog",
     "webpack:production": "cross-env NODE_ENV=production webpack --progress",
     "production": "run-s webpack:production pm2:production",
@@ -17,16 +17,16 @@
     "eslint": "eslint src/**"
   },
   "dependencies": {
-    "@casl/ability": "^5.1.2",
-    "@sentry/browser": "^6.0.1",
-    "@sentry/node": "^6.0.1",
+    "@casl/ability": "^5.2.2",
+    "@sentry/browser": "^6.2.1",
+    "@sentry/node": "^6.2.1",
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.23.0",
+    "cloudinary": "^1.25.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.18.0",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
@@ -36,23 +36,23 @@
     "formik": "^2.2.6",
     "glob": "^7.1.6",
     "helmet": "^4.4.1",
-    "highcharts": "^8.2.2",
+    "highcharts": "^9.0.1",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.20",
-    "mongoose": "^5.11.13",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.11.18",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.17",
+    "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.7.2",
-    "query-string": "^6.13.8",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-google-recaptcha": "^2.1.0",
-    "react-intl": "^5.10.16",
+    "react-intl": "^5.13.2",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
@@ -62,36 +62,36 @@
     "redux-thunk": "^2.3.0",
     "semantic-ui-react": "^2.0.3",
     "validator": "^13.5.2",
-    "yup": "^0.32.8"
+    "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.2.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
-    "chai": "^4.2.0",
+    "chai": "^4.3.3",
     "clean-webpack-plugin": "^3.0.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.18.0",
+    "css-loader": "^5.1.1",
+    "eslint": "^7.21.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "faker": "^5.1.0",
-    "mini-css-extract-plugin": "^1.3.4",
-    "mocha": "^8.2.1",
+    "faker": "^5.4.0",
+    "mini-css-extract-plugin": "^1.3.9",
+    "mocha": "^8.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "pm2": "^4.5.1",
-    "supertest": "^6.1.1",
+    "pm2": "^4.5.5",
+    "supertest": "^6.1.3",
     "terser-webpack-plugin": "^5.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "5.16.0",
-    "webpack-cli": "4.4.0",
+    "webpack": "5.24.3",
+    "webpack-cli": "4.5.0",
     "webpack-merge": "^5.7.3"
   }
 }
