--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "react-google-recaptcha": "^2.1.0",
     "react-intl": "^5.24.6",
     "react-redux": "^7.2.6",
-    "react-router-bootstrap": "^0.26.0",
-    "react-router-dom": "^6.2.2",
+    "react-router-bootstrap": "rr-v4",
+    "react-router-dom": "5.3.0",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
