--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.16.1",
+  "version": "0.16.2",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -16,79 +16,78 @@
     "eslint": "eslint src/**"
   },
   "dependencies": {
-    "@casl/ability": "^5.4.3",
-    "@sentry/browser": "^6.18.1",
-    "@sentry/node": "^6.18.1",
-    "async": "^3.2.3",
-    "axios": "^0.26.0",
+    "@casl/ability": "^6.1.1",
+    "@sentry/browser": "^7.12.1",
+    "@sentry/node": "^7.12.1",
+    "async": "^3.2.4",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.28.1",
+    "cloudinary": "^1.31.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "date-fns": "^2.28.0",
-    "dotenv": "^16.0.0",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.2",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
-    "express": "^4.17.3",
+    "express": "^4.18.1",
     "express-hbs": "^2.4.0",
     "fomantic-ui-css": "^2.8.8",
     "formik": "^2.2.9",
-    "glob": "^7.2.0",
-    "helmet": "^5.0.2",
-    "highcharts": "^9.3.3",
+    "glob": "^8.0.3",
+    "highcharts": "^10.2.1",
     "izitoast": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.2.8",
-    "multer": "^1.4.4",
-    "nodemailer": "^6.7.2",
-    "passport": "^0.5.2",
+    "mongoose": "^6.6.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.7.8",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "prop-types": "^15.8.1",
     "query-string": "^7.1.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha": "^2.1.0",
-    "react-intl": "^5.24.6",
-    "react-redux": "^7.2.6",
+    "react-intl": "^6.1.1",
+    "react-redux": "^8.0.2",
     "react-router-bootstrap": "rr-v4",
     "react-router-dom": "5.3.0",
-    "redux": "^4.1.2",
+    "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1",
-    "semantic-ui-react": "^2.1.2",
+    "semantic-ui-react": "^2.1.3",
     "validator": "^13.7.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
-    "@babel/plugin-transform-runtime": "^7.17.0",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.2.5",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "clean-webpack-plugin": "^4.0.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.0",
-    "eslint": "^8.10.0",
-    "eslint-plugin-react": "^7.29.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.23.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "faker": "5.5.3",
-    "jest": "^27.5.1",
-    "mini-css-extract-plugin": "^2.6.0",
+    "jest": "^29.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "pm2": "^5.2.0",
-    "supertest": "^6.2.2",
-    "terser-webpack-plugin": "^5.3.1",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2",
+    "supertest": "^6.2.4",
+    "terser-webpack-plugin": "^5.3.6",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
   },
   "packageManager": "yarn@3.2.3"
