--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,14 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - node/with-cache:
-          steps:
-            - run: yarn install
-            - run: yarn test
+      - node/install-packages:
+          pkg-manager: yarn
+      - run:
+          command: yarn install
+          name: Install dependencies
+      - run:
+          command: yarn test
+          name: Run tests
 workflows:
     build-and-test:
       jobs:
