--- a/.editorconfig
+++ b/.editorconfig
@@ -11,12 +11,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.md]
-max_line_length = 0
-trim_trailing_whitespace = false
-
-# The indentation in package.json will always need to be 2 spaces
-# https://github.com/npm/npm/issues/4718
-[package.json, bower.json]
+# Matches the exact files either package.json or .travis.yml
+[package.json, .travis.yml]
 indent_style = space
 indent_size = 2
