--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gadget-catalog",
-  "version": "0.16.2",
+  "version": "0.16.3",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@casl/ability": "^6.1.1",
+    "@reduxjs/toolkit": "^1.8.5",
     "@sentry/browser": "^7.12.1",
     "@sentry/node": "^7.12.1",
     "async": "^3.2.4",
@@ -31,7 +32,7 @@
     "draft-js-export-html": "^1.4.1",
     "express": "^4.18.1",
     "express-hbs": "^2.4.0",
-    "fomantic-ui-css": "^2.8.8",
+    "fomantic-ui-css": "^2.9.0",
     "formik": "^2.2.9",
     "glob": "^8.0.3",
     "highcharts": "^10.2.1",
@@ -55,7 +56,6 @@
     "react-router-bootstrap": "rr-v4",
     "react-router-dom": "5.3.0",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
