--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "gadget-catalog",
-  "version": "0.16.3",
+  "version": "0.16.4",
   "description": "A react application for cataloging gadgets",
   "author": "Shibbir Ahmed",
   "license": "MIT",
   "scripts": {
     "start": "run-p webpack:development pm2:development",
-    "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon --name gadget-catalog",
+    "pm2:development": "cross-env NODE_ENV=development pm2 start server.js --watch --no-daemon --name gadget-catalog --ignore-watch public/uploads",
     "webpack:development": "cross-env NODE_ENV=development webpack --progress --watch --stats normal",
     "pm2:production": "cross-env NODE_ENV=production pm2 start server.js --name gadget-catalog",
     "webpack:production": "cross-env NODE_ENV=production webpack --progress",
@@ -21,74 +21,74 @@
     "@sentry/browser": "^7.12.1",
     "@sentry/node": "^7.12.1",
     "async": "^3.2.4",
-    "axios": "^0.27.2",
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.31.0",
+    "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.2",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
-    "express": "^4.18.1",
-    "express-hbs": "^2.4.0",
-    "fomantic-ui-css": "^2.9.0",
-    "formik": "^2.2.9",
-    "glob": "^8.0.3",
-    "highcharts": "^10.2.1",
+    "express": "^4.18.2",
+    "express-hbs": "^2.4.2",
+    "fomantic-ui-css": "^2.9.3",
+    "formik": "^2.4.5",
+    "glob": "^8.1.0",
+    "highcharts": "^11.1.0",
     "izitoast": "^1.4.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^6.6.0",
+    "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.8",
+    "nodemailer": "^6.9.5",
     "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
+    "passport-jwt": "^4.0.1",
     "prop-types": "^15.8.1",
-    "query-string": "^7.1.1",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-google-recaptcha": "^2.1.0",
-    "react-intl": "^6.1.1",
-    "react-redux": "^8.0.2",
+    "react-dropzone": "^14.2.3",
+    "react-google-recaptcha": "^3.1.0",
+    "react-intl": "^6.4.7",
+    "react-redux": "^8.1.2",
     "react-router-bootstrap": "rr-v4",
     "react-router-dom": "5.3.0",
-    "redux": "^4.2.0",
-    "redux-promise-middleware": "^6.1.2",
-    "redux-thunk": "^2.4.1",
-    "semantic-ui-react": "^2.1.3",
-    "validator": "^13.7.0",
-    "yup": "^0.32.11"
+    "redux": "^4.2.1",
+    "redux-promise-middleware": "^6.1.3",
+    "redux-thunk": "^2.4.2",
+    "semantic-ui-react": "^2.1.4",
+    "validator": "^13.11.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "^7.22.20",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@faker-js/faker": "^8.0.2",
+    "babel-loader": "^9.1.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-html-attrs": "^3.0.5",
     "clean-webpack-plugin": "^4.0.0",
     "coveralls": "^3.1.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
-    "eslint": "^8.23.1",
-    "eslint-plugin-react": "^7.31.8",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.49.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "faker": "5.5.3",
-    "jest": "^29.0.3",
-    "mini-css-extract-plugin": "^2.6.1",
+    "jest": "^29.7.0",
+    "mini-css-extract-plugin": "^2.7.6",
     "npm-run-all": "^4.1.5",
-    "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "pm2": "^5.2.0",
-    "supertest": "^6.2.4",
-    "terser-webpack-plugin": "^5.3.6",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-merge": "^5.8.0"
+    "pm2": "^5.3.0",
+    "supertest": "^6.3.3",
+    "terser-webpack-plugin": "^5.3.9",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.9.0"
   },
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.6.3"
 }
