--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   },
   "dependencies": {
     "@casl/ability": "^6.1.1",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@sentry/browser": "^7.12.1",
-    "@sentry/node": "^7.12.1",
-    "async": "^3.2.4",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@sentry/node": "^7.69.0",
     "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.40.0",
@@ -54,8 +52,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-intl": "^6.4.7",
     "react-redux": "^8.1.2",
-    "react-router-bootstrap": "rr-v4",
-    "react-router-dom": "5.3.0",
+    "react-router-dom": "^6.16.0",
     "redux": "^4.2.1",
     "redux-promise-middleware": "^6.1.3",
     "redux-thunk": "^2.4.2",
