--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cloudinary": "^1.40.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
+    "cookie-signature": "^1.2.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
